Trying to fix dropdown arrow (didn't work) Added favicon (index.html, assets) Removed horizontal scroll in the dropdown (dark-mode.css)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -219,7 +219,6 @@ header>div:nth-child(6)
   position: absolute;
   top: 58px;
   right: -111px;
-  z-index: 3;
   width: 262px;
   height: 512px;
   border-width: 1px;
@@ -237,18 +236,31 @@ header>div:nth-child(6)
 
 /*SO page for border radius: https://stackoverflow.com/questions/16676166/apply-border-radius-to-scrollbars-with-css. This comment was not worth a commit*/
 
+.dropdown-container--arrow-up::before
+{
+  display: block;
+}
+
 .dropdown-container--arrow-up
 {
   position: absolute;
   top: -7px;
   left: 30px;
-  z-index: inherit;
+  z-index: 3;
   width: 0px;
+  height: 0px; 
+}
+
+.dropdown-container--arrow-up::after
+{
+  display: block;
   height: 0px;
-  border-width: 0px 7px 7px; 
+  margin: auto;
   border-color: transparent transparent #FF0000;
   /* border-color: transparent transparent rgb(38, 38, 38); -- final colours*/ 
   border-style: solid;
+  border-width: 0px 7px 7px; 
+  content: ""
 }
 
 .user-dropdown--profile-link
@@ -282,7 +294,7 @@ header>div:nth-child(6)
 {
   position: absolute;
   bottom: 13px;
-  width: 100%;
+  width: calc(100% - 16px);
   color: #cdcdcd;
   font-size: 1.8rem;
   font-weight: 700;
